[gd_scene load_steps=22 format=2]

[ext_resource path="res://IMAGES/BGFLOOR.png" type="Texture" id=1]
[ext_resource path="res://IMAGES/ALPHABET/E.png" type="Texture" id=2]
[ext_resource path="res://IMAGES/ALPHABET/A.png" type="Texture" id=3]
[ext_resource path="res://IMAGES/ALPHABET/R.png" type="Texture" id=4]
[ext_resource path="res://IMAGES/ALPHABET/V.png" type="Texture" id=5]
[ext_resource path="res://IMAGES/ALPHABET/M.png" type="Texture" id=6]
[ext_resource path="res://IMAGES/ALPHABET/O.png" type="Texture" id=7]
[ext_resource path="res://IMAGES/ALPHABET/T.png" type="Texture" id=8]
[ext_resource path="res://IMAGES/ALPHABET/N.png" type="Texture" id=9]
[ext_resource path="res://IMAGES/ALPHABET/U.png" type="Texture" id=10]
[ext_resource path="res://IMAGES/ALPHABET/C.png" type="Texture" id=11]
[ext_resource path="res://IMAGES/ALPHABET/G.png" type="Texture" id=12]
[ext_resource path="res://IMAGES/ALPHABET/P.png" type="Texture" id=13]
[ext_resource path="res://IMAGES/ALPHABET/S.png" type="Texture" id=14]
[ext_resource path="res://EndGame.gd" type="Script" id=15]
[ext_resource path="res://FONT/numbers.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
resource_name = "aaaaa"
size = 32

[sub_resource type="Theme" id=4]
"RichTextLabel/fonts/MY LABEL" = SubResource( 3 )
"RichTextLabel/styles/MY LABEL" = null

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 104, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150, 30 )

[node name="EndGame" type="Node2D"]
script = ExtResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 302, 400 )

[node name="BACKGROUND" type="Sprite" parent="."]
position = Vector2( 300, 400 )
texture = ExtResource( 1 )

[node name="GAME OVER" type="Node2D" parent="."]

[node name="G" type="Sprite" parent="GAME OVER"]
position = Vector2( 66, 162 )
scale = Vector2( 3, 3 )
texture = ExtResource( 12 )

[node name="A" type="Sprite" parent="GAME OVER"]
position = Vector2( 168, 162 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="M" type="Sprite" parent="GAME OVER"]
position = Vector2( 270, 162 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="E" type="Sprite" parent="GAME OVER"]
position = Vector2( 366, 162 )
scale = Vector2( 2.8125, 3 )
texture = ExtResource( 2 )

[node name="O" type="Sprite" parent="GAME OVER"]
position = Vector2( 251, 270 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="E2" type="Sprite" parent="GAME OVER"]
position = Vector2( 450, 270 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="R" type="Sprite" parent="GAME OVER"]
position = Vector2( 548, 270 )
scale = Vector2( 2.6875, 3 )
texture = ExtResource( 4 )

[node name="SCORE" type="Node2D" parent="."]

[node name="S" type="Sprite" parent="SCORE"]
position = Vector2( 120, 408 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 14 )

[node name="C" type="Sprite" parent="SCORE"]
position = Vector2( 203, 408 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 11 )

[node name="O2" type="Sprite" parent="SCORE"]
position = Vector2( 288, 408 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )

[node name="R2" type="Sprite" parent="SCORE"]
position = Vector2( 372, 408 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="E3" type="Sprite" parent="SCORE"]
position = Vector2( 456, 408 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="SCORE_COUNT" type="RichTextLabel" parent="."]
margin_left = 114.0
margin_top = 480.0
margin_right = 471.0
margin_bottom = 568.0
grow_horizontal = 0
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][center]x[/center][/wave]"
text = "x"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MENU" type="Area2D" parent="."]

[node name="M2" type="Sprite" parent="MENU"]
position = Vector2( 30, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="E4" type="Sprite" parent="MENU"]
position = Vector2( 80, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="N" type="Sprite" parent="MENU"]
position = Vector2( 130, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="U" type="Sprite" parent="MENU"]
position = Vector2( 180, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )

[node name="MENU_CLICK" type="CollisionShape2D" parent="MENU"]
position = Vector2( 106, 700 )
shape = SubResource( 1 )

[node name="REPEAT" type="Area2D" parent="."]

[node name="R" type="Sprite" parent="REPEAT"]
position = Vector2( 324, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="E" type="Sprite" parent="REPEAT"]
position = Vector2( 374, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="P" type="Sprite" parent="REPEAT"]
position = Vector2( 424, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="E2" type="Sprite" parent="REPEAT"]
position = Vector2( 474, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="A" type="Sprite" parent="REPEAT"]
position = Vector2( 524, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="T" type="Sprite" parent="REPEAT"]
position = Vector2( 574, 700 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )

[node name="REPEAT_CLICK" type="CollisionShape2D" parent="REPEAT"]
position = Vector2( 450, 700 )
shape = SubResource( 2 )

[node name="V" type="Sprite" parent="."]
position = Vector2( 350, 270 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[connection signal="visibility_changed" from="." to="." method="_on_EndGame_visibility_changed"]
[connection signal="input_event" from="MENU" to="." method="_on_MENU_input_event"]
[connection signal="mouse_entered" from="MENU" to="." method="_on_MENU_mouse_entered"]
[connection signal="mouse_exited" from="MENU" to="." method="_on_MENU_mouse_exited"]
[connection signal="input_event" from="REPEAT" to="." method="_on_REPEAT_input_event"]
[connection signal="mouse_entered" from="REPEAT" to="." method="_on_REPEAT_mouse_entered"]
[connection signal="mouse_exited" from="REPEAT" to="." method="_on_REPEAT_mouse_exited"]
